--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "concurrently \"npm run watch-ts\" \"nodemon app.js\"",
+    "dev": "nodemon app.js",
+    "build":"tsc -p . -w",
+    "watch-ts": "tsc --watch"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.21"
+  }
 }
